--- a/assets/app/css/noticias.css
+++ b/assets/app/css/noticias.css
@@ -4,6 +4,25 @@
     text-decoration: none;
 }
 
-.modal-content{
+.modal{
 	display: none;
+}
+.modal {
+    background-color: #000;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+.modal-content {
+    position: absolute;
+    z-index: 10;
+    background-color: #fff;
+    width: 70%;
+    top: 30px;
+    left: 16%;/* Arrumar o alinhamento no centro*/
+    padding: 0px 35px 0px 35px;
 }
